kubernetes/home-assistant/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassist-deployment
  namespace: home-assistant
  labels:
    app: homeassist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassist
  template:
    metadata:
      labels:
        app: homeassist
      # annotations:
      #   k8s.v1.cni.cncf.io/networks: '[
      #     {
      #         "name" : "lan-network",
      #         "interface": "eth1"
      #     }
      #   ]'
    spec:
      containers:
        - name: homeassist
          image: homeassistant/home-assistant
          ports:
            - containerPort: 8123
          securityContext:
            capabilities:
              add:
              - NET_ADMIN
              - NET_RAW
              - NET_BROADCAST
          volumeMounts:
            - mountPath: "/config"
              name: homeassist-persistent-storage
            - mountPath: "/config/configuration.yaml"
              subPath: "configuration.yaml"
              name: homeassist-config
      volumes:
        - name: homeassist-config
          secret:
            secretName: homeassist-config
            defaultMode: 0777
        - name: homeassist-persistent-storage
          persistentVolumeClaim:
            claimName: homeassist-pv-claim
