kubernetes/home-assistant/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homeassist
  namespace: home-assistant
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.52
  selector:
    app: homeassist
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8123
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8123
