kubernetes/home-assistant/external-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassist=external-ingress
  namespace: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   proxy_set_header Upgrade $http_upgrade;
    #   proxy_set_header Connection "upgrade";
spec:
  tls:
    - hosts:
      - burkepi.ddns.net
      secretName: homeassist-certificate-letsencrypt
  rules:
    - host: burkepi.ddns.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassist
                port:
                  number: 80
