kubernetes/home-assistant/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassist-ingress
  namespace: home-assistant
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "upgrade";
spec:
  tls:
    - hosts:
      - homeassistant.picluster.local
      # secretName: homeassist-certificate
  rules:
    - host: home-assistant.picluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassist
                port:
                  number: 443
